[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/LevelButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Bridge.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Level10.gd" type="Script" id=4]
[ext_resource path="res://scenes/Player2.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/new_tileset.tres" type="TileSet" id=6]
[ext_resource path="res://scenes/Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Bridgelvl10.gd" type="Script" id=8]
[ext_resource path="res://scripts/Buttonlvl10.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 111.831, 16.8361 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 115.97, 160.415 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.641, 4.17765 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 98.4967, 34.0546 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 49.9458, 17.185 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 104.025, 17.0789 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 17.4656, 15.9168 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 114, 18 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 35, 49 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 66.325, 16.8348 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 48.1237, 15.7375 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16.6684, 16.3647 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 33.9286, 33.1248 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 16.9789, 48.4303 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 17.5627, 80.9579 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 34.5377, 16.0178 )

[sub_resource type="Animation" id=17]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Level10" type="Node2D" groups=[
"Level",
]]
position = Vector2( 0, -1 )
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 0, 4, -65536, 0, 4, -65535, 0, 4, -65534, 0, 4, -65533, 0, 4, -65532, 0, 4, -65531, 0, 4, -65530, 0, 4, -65529, 0, 4, -65528, 0, 4, -65527, 0, 4, -65526, 0, 4, -65525, 0, 4, -65524, 0, 4, -65523, 0, 4, -65522, 0, 4, -65521, 0, 4, -65520, 0, 4, -65519, 0, 4, -65518, 0, 4, -65517, 0, 4, -65516, 0, 4, -65515, 0, 4, -65514, 0, 4, -65513, 0, 4, -65512, 0, 4, -65511, 0, 4, -65510, 0, 4, -65509, 0, 4, -65508, 0, 4, -65507, 0, 4, -65506, 0, 4, -65505, 0, 4, -65504, 0, 4, 65535, 0, 4, 0, 0, 5, 1, 0, 5, 2, 0, 5, 3, 0, 5, 4, 0, 5, 5, 0, 5, 6, 0, 5, 7, 0, 5, 8, 0, 5, 9, 0, 5, 10, 0, 5, 11, 0, 5, 12, 0, 5, 13, 0, 5, 14, 0, 5, 15, 0, 5, 16, 0, 5, 17, 0, 5, 18, 0, 5, 19, 0, 5, 20, 0, 5, 21, 0, 5, 22, 0, 5, 23, 0, 5, 24, 0, 5, 25, 0, 5, 26, 0, 5, 27, 0, 5, 28, 0, 5, 29, 0, 5, 30, 0, 5, 31, 0, 5, 32, 0, 4, 131071, 0, 4, 65536, 0, 5, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 5, 65544, 0, 5, 65545, 0, 5, 65546, 0, 5, 65547, 0, 5, 65548, 0, 5, 65549, 0, 5, 65550, 0, 5, 65551, 0, 5, 65552, 0, 5, 65553, 0, 5, 65554, 0, 5, 65555, 0, 5, 65556, 0, 5, 65557, 0, 5, 65558, 0, 5, 65559, 0, 5, 65560, 0, 5, 65561, 0, 5, 65562, 0, 5, 65563, 0, 5, 65564, 0, 5, 65565, 0, 5, 65566, 0, 5, 65567, 0, 5, 65568, 0, 4, 196607, 0, 4, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 5, 131081, 0, 5, 131082, 0, 5, 131083, 0, 5, 131084, 0, 5, 131085, 0, 5, 131086, 0, 5, 131087, 0, 5, 131088, 0, 5, 131089, 0, 5, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 5, 131097, 0, 5, 131098, 0, 5, 131099, 0, 5, 131100, 0, 5, 131101, 0, 5, 131102, 0, 5, 131103, 0, 5, 131104, 0, 4, 262143, 0, 4, 196608, 0, 0, 196609, 0, 0, 196610, 0, 5, 196611, 0, 5, 196612, 0, 5, 196613, 0, 5, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 5, 196622, 0, 5, 196623, 0, 5, 196624, 0, 5, 196625, 0, 5, 196626, 0, 0, 196627, 0, 5, 196628, 0, 5, 196629, 0, 5, 196630, 0, 5, 196631, 0, 0, 196632, 0, 5, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 4, 327679, 0, 4, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 5, 262149, 0, 5, 262150, 0, 5, 262151, 0, 5, 262152, 0, 5, 262153, 0, 0, 262154, 0, 5, 262155, 0, 5, 262156, 0, 0, 262157, 0, 5, 262158, 0, 5, 262159, 0, 5, 262160, 0, 5, 262161, 0, 5, 262162, 0, 0, 262163, 0, 5, 262164, 0, 5, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 5, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 4, 393215, 0, 4, 327680, 0, 5, 327681, 0, 5, 327682, 0, 0, 327683, 0, 0, 327684, 0, 5, 327685, 0, 5, 327686, 0, 5, 327687, 0, 5, 327688, 0, 5, 327689, 0, 0, 327690, 0, 5, 327691, 0, 5, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 5, 327697, 0, 5, 327698, 0, 0, 327699, 0, 5, 327700, 0, 5, 327701, 0, 0, 327702, 0, 5, 327703, 0, 5, 327704, 0, 5, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 4, 458751, 0, 4, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 5, 393224, 0, 0, 393225, 0, 0, 393226, 0, 5, 393227, 0, 5, 393228, 0, 5, 393229, 0, 5, 393230, 0, 5, 393231, 0, 0, 393232, 0, 5, 393233, 0, 5, 393234, 0, 0, 393235, 0, 5, 393236, 0, 5, 393237, 0, 0, 393238, 0, 5, 393239, 0, 5, 393240, 0, 5, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 4, 524287, 0, 4, 458752, 0, 0, 458753, 0, 5, 458754, 0, 5, 458755, 0, 5, 458756, 0, 5, 458757, 0, 5, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 5, 458762, 0, 5, 458763, 0, 5, 458764, 0, 5, 458765, 0, 5, 458766, 0, 5, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 5, 458772, 0, 5, 458773, 0, 0, 458774, 0, 0, 458775, 0, 5, 458776, 0, 5, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 4, 589823, 0, 4, 524288, 0, 0, 524289, 0, 5, 524290, 0, 5, 524291, 0, 5, 524292, 0, 5, 524293, 0, 5, 524294, 0, 5, 524295, 0, 5, 524296, 0, 5, 524297, 0, 5, 524298, 0, 5, 524299, 0, 5, 524300, 0, 5, 524301, 0, 5, 524302, 0, 5, 524303, 0, 5, 524304, 0, 5, 524305, 0, 5, 524306, 0, 5, 524307, 0, 5, 524308, 0, 5, 524309, 0, 5, 524310, 0, 0, 524311, 0, 5, 524312, 0, 5, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 4, 655359, 0, 4, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 5, 589832, 0, 5, 589833, 0, 5, 589834, 0, 5, 589835, 0, 0, 589836, 0, 5, 589837, 0, 5, 589838, 0, 5, 589839, 0, 5, 589840, 0, 5, 589841, 0, 5, 589842, 0, 5, 589843, 0, 5, 589844, 0, 5, 589845, 0, 5, 589846, 0, 0, 589847, 0, 5, 589848, 0, 5, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 4, 720895, 0, 4, 655360, 0, 5, 655361, 0, 5, 655362, 0, 5, 655363, 0, 5, 655364, 0, 5, 655365, 0, 5, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 5, 655374, 0, 5, 655375, 0, 5, 655376, 0, 5, 655377, 0, 5, 655378, 0, 5, 655379, 0, 5, 655380, 0, 5, 655381, 0, 5, 655382, 0, 0, 655383, 0, 5, 655384, 0, 5, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 4, 786431, 0, 4, 720896, 0, 5, 720897, 0, 5, 720898, 0, 5, 720899, 0, 5, 720900, 0, 5, 720901, 0, 5, 720902, 0, 5, 720903, 0, 5, 720904, 0, 5, 720905, 0, 5, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 5, 720910, 0, 5, 720911, 0, 5, 720912, 0, 5, 720913, 0, 5, 720914, 0, 5, 720915, 0, 5, 720916, 0, 5, 720917, 0, 5, 720918, 0, 0, 720919, 0, 5, 720920, 0, 5, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720928, 0, 4, 851967, 0, 4, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 5, 786439, 0, 5, 786440, 0, 5, 786441, 0, 5, 786442, 0, 5, 786443, 0, 0, 786444, 0, 5, 786445, 0, 5, 786446, 0, 5, 786447, 0, 5, 786448, 0, 5, 786449, 0, 5, 786450, 0, 5, 786451, 0, 5, 786452, 0, 5, 786453, 0, 5, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 4, 917503, 0, 4, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 5, 851975, 0, 5, 851976, 0, 5, 851977, 0, 5, 851978, 0, 5, 851979, 0, 5, 851980, 0, 5, 851981, 0, 5, 851982, 0, 5, 851983, 0, 5, 851984, 0, 5, 851985, 0, 5, 851986, 0, 5, 851987, 0, 5, 851988, 0, 5, 851989, 0, 5, 851990, 0, 5, 851991, 0, 5, 851992, 0, 5, 851993, 0, 5, 851994, 0, 5, 851995, 0, 5, 851996, 0, 5, 851997, 0, 5, 851998, 0, 5, 851999, 0, 5, 852000, 0, 4, 983039, 0, 4, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 5, 917511, 0, 5, 917512, 0, 5, 917513, 0, 5, 917514, 0, 5, 917515, 0, 5, 917516, 0, 5, 917517, 0, 5, 917518, 0, 5, 917519, 0, 5, 917520, 0, 5, 917521, 0, 5, 917522, 0, 5, 917523, 0, 5, 917524, 0, 5, 917525, 0, 5, 917526, 0, 5, 917527, 0, 5, 917528, 0, 5, 917529, 0, 5, 917530, 0, 5, 917531, 0, 5, 917532, 0, 5, 917533, 0, 5, 917534, 0, 5, 917535, 0, 5, 917536, 0, 4, 1048575, 0, 4, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 5, 983047, 0, 5, 983048, 0, 5, 983049, 0, 5, 983050, 0, 5, 983051, 0, 5, 983052, 0, 5, 983053, 0, 5, 983054, 0, 5, 983055, 0, 5, 983056, 0, 5, 983057, 0, 5, 983058, 0, 5, 983059, 0, 5, 983060, 0, 5, 983061, 0, 5, 983062, 0, 5, 983063, 0, 5, 983064, 0, 5, 983065, 0, 5, 983066, 0, 5, 983067, 0, 5, 983068, 0, 5, 983069, 0, 5, 983070, 0, 5, 983071, 0, 5, 983072, 0, 4, 1114111, 0, 4, 1048576, 0, 4, 1048577, 0, 4, 1048578, 0, 4, 1048579, 0, 4, 1048580, 0, 4, 1048581, 0, 4, 1048582, 0, 4, 1048583, 0, 4, 1048584, 0, 4, 1048585, 0, 4, 1048586, 0, 4, 1048587, 0, 4, 1048588, 0, 4, 1048589, 0, 4, 1048590, 0, 4, 1048591, 0, 4, 1048592, 0, 4, 1048593, 0, 4, 1048594, 0, 4, 1048595, 0, 4, 1048596, 0, 4, 1048597, 0, 4, 1048598, 0, 4, 1048599, 0, 4, 1048600, 0, 4, 1048601, 0, 4, 1048602, 0, 4, 1048603, 0, 4, 1048604, 0, 4, 1048605, 0, 4, 1048606, 0, 4, 1048607, 0, 4, 1048608, 0, 4 )

[node name="WalkingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 113.43, 303.272 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 916.361, 255.415 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 82.1801, 462.553 )
scale = Vector2( 20, 20 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 129.029, 64.6335 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 719.15, 80.299 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 751.745, 399.342 )
shape = SubResource( 5 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 623.676, 79.606 )
shape = SubResource( 5 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 720.089, 144.666 )
shape = SubResource( 5 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 119.497, 207.772 )
shape = SubResource( 6 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 751.032, 113.282 )
shape = SubResource( 7 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 305, 112 )
shape = SubResource( 8 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 304, 336 )
shape = SubResource( 8 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 32, 112 )
shape = SubResource( 9 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 543.708, 240.044 )
shape = SubResource( 10 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 367.979, 368.049 )
shape = SubResource( 11 )

[node name="CollisionShape2D28" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 238.019, 239.894 )
shape = SubResource( 11 )

[node name="CollisionShape2D25" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 431.154, 176.719 )
shape = SubResource( 11 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 240.05, 80.0206 )
shape = SubResource( 12 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 399.73, 143.972 )
shape = SubResource( 12 )

[node name="CollisionShape2D18" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 367.222, 303.856 )
shape = SubResource( 12 )

[node name="CollisionShape2D19" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 367.652, 400.072 )
shape = SubResource( 12 )

[node name="CollisionShape2D20" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 95.6321, 160.608 )
shape = SubResource( 13 )

[node name="CollisionShape2D21" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 15.9485, 239.988 )
shape = SubResource( 14 )

[node name="CollisionShape2D22" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 302.944, 147.031 )
shape = SubResource( 14 )

[node name="CollisionShape2D23" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 496.079, 206.596 )
shape = SubResource( 14 )

[node name="CollisionShape2D24" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 687.409, 206.596 )
shape = SubResource( 14 )

[node name="CollisionShape2D26" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 719.817, 303.821 )
shape = SubResource( 15 )

[node name="CollisionShape2D27" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 591.837, 163.328 )
shape = SubResource( 15 )

[node name="CollisionShape2D29" type="CollisionShape2D" parent="WalkingArea"]
position = Vector2( 288.21, 209.126 )
shape = SubResource( 16 )

[node name="fallTile" type="Node2D" parent="."]

[node name="LevelButton" parent="." instance=ExtResource( 1 )]
position = Vector2( 960, 224 )

[node name="Button" parent="." instance=ExtResource( 7 )]
position = Vector2( 368.115, 345.957 )
script = ExtResource( 9 )

[node name="Bridge" parent="." instance=ExtResource( 3 )]
position = Vector2( 800, 415.015 )
script = ExtResource( 8 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 87.6149, 441.399 )

[node name="Player2" parent="." instance=ExtResource( 5 )]
position = Vector2( 904.946, 331.015 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/fade = SubResource( 17 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 256 )
current = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 423.0
margin_top = 16.0
margin_right = 590.0
margin_bottom = 56.0
text = "How did you get there?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 474.0
margin_top = 360.0
margin_right = 641.0
margin_bottom = 400.0
text = "Player 1 doesn't move with the platform"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="WalkingArea" to="." method="_on_WalkingArea_body_entered"]
[connection signal="body_exited" from="WalkingArea" to="." method="_on_WalkingArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
